# RustRest

./: .gitignore  Cargo.toml  README.md
collections/: example.json
src/: cli.rs  client.rs  collections.rs  config.rs  display.rs  error.rs  history.rs  lib.rs  main.rs  request.rs  response.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
tests/: client_test.rs  display_test.rs
